# openwebui_engineering_assistant

./: README.md  devenv.nix  docker-compose.yaml  pyproject.toml
searxng/: settings.yml
